.provarCaches/00D410000011HE0EAM/objects/rstk__polineaddr__c.object
<CustomObject>
    <description>polineaddr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__polineaddr_poline__r.rstk__externalid__c &amp; &apos;_&apos; &amp;TEXT(rstk__polineaddr_seqno__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_city__c</fullName>
        <inlineHelpText>PO Line Address City</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_contactemail__c</fullName>
        <inlineHelpText>PO Line Contact Email</inlineHelpText>
        <label>Contact Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_country__c</fullName>
        <inlineHelpText>PO Line Address Country</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_deleteind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this Address Line is deleted</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>PO Line Address Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpolineaddrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_fax__c</fullName>
        <inlineHelpText>PO Line Address Country</inlineHelpText>
        <label>Fax Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_isocountry__c</fullName>
        <description>polineaddr_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_lne__c</fullName>
        <inlineHelpText>This is the Line Number for this PO Address</inlineHelpText>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_ordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>PO Line Number Purchase Order number</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POLINEADDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_phone__c</fullName>
        <inlineHelpText>PO Line Address Phone</inlineHelpText>
        <label>Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_poline__c</fullName>
        <inlineHelpText>PO Line number</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>POLINEADDRs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_seqno__c</fullName>
        <inlineHelpText>This is the Sequence Number of this PO Line</inlineHelpText>
        <label>Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>PO Line Address Site</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>polineaddrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_stateprov__c</fullName>
        <inlineHelpText>PO Line Address State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_street__c</fullName>
        <inlineHelpText>PO Line Address street</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_tempid__c</fullName>
        <inlineHelpText>Internal temporary Id</inlineHelpText>
        <label>temp id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_website__c</fullName>
        <inlineHelpText>PO Line Address Website</inlineHelpText>
        <label>Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__polineaddr_zippostalcode__c</fullName>
        <inlineHelpText>PO Line Address Zip Code</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Line Address</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>POLINEADDR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Line Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Minimum_values_required</fullName>
        <active>true</active>
        <description>Minimum values required.</description>
        <errorConditionFormula>OR(ISBLANK(rstk__polineaddr_street__c), ISBLANK(rstk__polineaddr_city__c))</errorConditionFormula>
        <errorMessage>PO Line address requires street and city information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__poline_not_null</fullName>
        <active>true</active>
        <description>POLine not null.</description>
        <errorConditionFormula>isNULL(rstk__polineaddr_poline__c)</errorConditionFormula>
        <errorMessage>PO Line value needs be set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__validate_email</fullName>
        <active>true</active>
        <description>Validate Email Address</description>
        <errorConditionFormula>And(NOT(ISBLANK(rstk__polineaddr_contactemail__c)), NOT(REGEX(UPPER(rstk__polineaddr_contactemail__c), &quot;^[A-Z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,40}$&quot;)))</errorConditionFormula>
        <errorMessage>Email address is not valid.</errorMessage>
    </validationRules>
</CustomObject>